--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "axios": "^0.27.2",
     "next": "12.1.5",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "sitemap": "^7.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.5",
